# rsgeo

./: .Rbuildignore  .gitignore  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  configure  configure.ac  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml
R/: as_sf.R  c-methods.R  cast.R  casting.R  combine.R  compat.R  constants.R  constructors.R  coords-utils.R  coords.R  expanding.R  explode.R  extendr-wrappers.R  format.R  methods.R  plot.R  print-methods.R  print-tibble.R  sdf-compat.R  segmentize.R  sf-compat.R  simplify.R  utils-constants.R  utils.R  zzz.R
R/refactor/: as_rsgeom.R  as_sf.R  c-methods.R  casting.R  combine.R  expanding.R  extendr-wrappers.R  geojson.R  plot.R  print-methods.R  sf-compat.R
dev/: printing.R
docs/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: Getting-Started.html  index.html
docs/news/: index.html
docs/reference/: area.html  as_rsgeo.html  as_rsgeom.html  as_sfg.html  bearing.html  boundaries.html  cast_geoms.html  centroid.html  centroids.html  chaikin_smoothing.html  closest_point.html  combine_geoms.html  construction.html  convex.html  coord_utils.html  coords.html  densify.html  distance.html  expand_geoms.html  explode_lines.html  extreme_coords.html  flatten_geoms.html  frechet_distance.html  geometry.html  haversine_destination.html  haversine_intermediate.html  index.html  length.html  line_interpolate_point.html  line_segmentize.html  locate_point_on_line.html  plot.rsgeo.html  predicates.html  print.html  read_geojson.html  rsgeo-package.html  rstar_rtree.html  simplify.html  simplify_geom.html  topology.html  (+3 more)
inst/benchmarks/: booleanops.R
inst/dev-helpers/: as-vec-coords.R
man/: area.Rd  as.matrix.rs_POINT.Rd  as_rsgeo.Rd  as_rsgeom.Rd  as_sf.Rd  as_sfg.Rd  bearing.Rd  boundaries.Rd  cast_geoms.Rd  centroid.Rd  centroids.Rd  chaikin_smoothing.Rd  closest_point.Rd  combine_geoms.Rd  construction.Rd  convex.Rd  coord_utils.Rd  coords.Rd  densify.Rd  distance.Rd  expand_geoms.Rd  explode_lines.Rd  extreme_coords.Rd  flatten_geoms.Rd  frechet_distance.Rd  geom_point.Rd  geom_points_matrix.Rd  geometry.Rd  haversine_destination.Rd  haversine_intermediate.Rd  length.Rd  line_interpolate_point.Rd  line_segmentize.Rd  locate_point_on_line.Rd  plot.rsgeo.Rd  predicates.Rd  print.Rd  read_geojson.Rd  rs_point.Rd  rs_points.Rd  (+8 more)
src/: Makevars  Makevars.webr  Makevars.win  entrypoint.c  rustpkg-win.def
src/rust/: Cargo.toml  geoms.txt  vendor-config.toml  vendor.tar.xz
src/rust/src/: area.rs  boundary.rs  casting.rs  construction.rs  conversion.rs  coord_utils.rs  coords.rs  densify.rs  distance.rs  geoms.rs  hausdorff.rs  intersects.rs  length.rs  lib.rs  main.rs  query.rs  rnetmerge.rs  rsvctr.rs  segmentize.rs  sfconversion.rs  similarity.rs  simplification.rs  spatial_index.rs  spatialindex.rs  topology.rs  types.rs  union.rs  utils.rs
src/rust/src/casting/: cast.rs  combine.rs  expand.rs  explode.rs  mod.rs
src/rust/src/io/: geojsonimpl.rs  mod.rs  wkbimpl.rs  wktimpl.rs
tests/: testthat.R
tests/testthat/: test-area.R  test-bearing.R  test-boundaries.R  test-closest-point.R  test-coords.R  test-distance.R  test-geometry-construction.R  test-hausdorff.R  test-haversine-fns.R  test-length.R  test-line-locate-point.R
tools/: msrv.R
vignettes/articles/: Getting-Started.Rmd
